2007-06-24  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Project/CProject.cs: Changed to accomodate the new CTagsCompletion
	  design
	* Completion.cs: This is where CBinding will specify more specialized
	  behavior for the CTagsCompletion AddIn

2007-06-22  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Project/CProject.cs: Made a very simple implementation of
	  AddTagsToProvider which is the method where the logic about which
	  tags shoud be added to the completion list window takes place.

2007-06-21  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Gui/EditPackagesDialog.cs: Added a package icon to both packages
	  columns.
	* Project/CProjectBinding.cs, Project/CProject.cs: Implemented
	  CreateSingleFileProject

2007-06-20  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Gui/OutputOptionsPanel.cs, Project/CProject.cs,
	  gtk-gui/CBinding.EditPackagesDialog.cs,
	  gtk-gui/CBinding.CodeGenerationPanel.cs, Compiler/GNUCompiler.cs:
	  Fixed a few bugs.

2007-06-19  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Project/CProject.cs: Fixed bug where only projects that had a binary
	  target got correctly cleaned.

2007-06-19  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Gui/ProjectPackagesFolderNodeBuilder.cs: Changed the package
	  added/removed handlers to just call UpdateAll from the builder.

2007-06-19  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Gui/ProjectPackagesFolderNodeBuilder.cs: Changed the node builder so
	  that it registeres even handlers correctly
	* Project/ProjectPackageCollection.cs, Project/CProject.cs: Removed the
	  SetProject method and replaced it with and internal get/set
	  property.

2007-06-19  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Project/CProject.cs: CProject does want it's tags written.

2007-06-18  Marcos David Marin Amador <MarcosMarin@gmail.com> 

	* Project/CProjectServiceExtension.cs, Project/CProject.cs: Changed to